# programming

./: DesignPatterns  Haskel  README.md  Scripting
Assembly/: Makefile  echo.asm  hello.asm  maxofthree.asm  registers.md  writingtofile.asm
C/: typeof.c
C++/: README.md  a.out  explicit.cpp
Compiler/: Fundamentals.md
DesignPatterns/: ArrayAddition.java
Git/: README  command.txt
Haskel/: README.md
Parallel-Programming/: README.md
Scripting/: .cshrc  .screenrc  LLVMBuilds  Makefile  UnixCommands  WritingMakefile  build.pl  commands.txt  mp1_build.pl  passwordfreessh.txt  runseq  setup.klee  setup.latestllvm  setup.llvmpa
SelfWebifying/: ToDo.txt  blog.html  courses.html  hobbies.html  index.html  pastjobs.html  research.html
Webdesign/: README.md  ToDo.txt  blog.html  courses.html  hobbies.html  index.html  research.html
assembly/: README.md  exit.s  fibonacci.asm  hello.asm  helloworld_syscalls.asm
c/: Endian-ness.c  allignment.c  getrlimit.c  hex dump.c  posix_memalign.c  printf_null.c  typeof.c
c++/: README.md  escapeAnalysis.cpp
design-patterns/: README
go/: publish.go  report.txt  servefile.go  server.go  sortedCopy  sortedCopy.go  template.go  test.txt  view.html
nodejs/: README.md  hello-tcp.js  my_static_file_server.js  package.json  parser.js
parallel-programming/: README.md
scripting/: .Xresourses  README  setup.latestllvm
scripting/cmake/Tutorial/: CMakeLists.txt  Tutorial.cxx
scripting/cmake/Tutorial/MathFunctions/: CMakeLists.txt  mysqrt.cxx  mysqrt.h
self-webifying/: blogspot.template  courses.html  hobbies.html  (+1 more)
(+1533 files in other folders)
